--- a/Views/Shared/_menu.cshtml
+++ b/Views/Shared/_menu.cshtml
@@ -3,5 +3,6 @@
         <li> <a href="/Home/Index">Home</a></li>
         <li> <a href="/Home/Sobre">Sobre</a></li>
         <li> <a href="/Home/Ajuda">Ajuda</a></li>
+        <li> <a href="/Home/create">create</a></li>
     </ul>
 </nav>
