--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -18,6 +18,13 @@
         </li>
     }
 </ul>
+<email mail-to="joao">
+
+</email>
+
+<vc:noticias total="10" is-urgente="true">
+
+</vc:noticias>
 
 @*<p>@Model.Id</p>
     <p>@Model.Autor</p>
